tests/neg/i11994.check
-- [E008] Not Found Error: tests/neg/i11994.scala:2:28 -----------------------------------------------------------------
2 |implicit def foo[T <: Tuple.meow]: Unit = ??? // error
  |                      ^^^^^^^^^^
  |                      type meow is not a member of object Tuple
-- [E008] Not Found Error: tests/neg/i11994.scala:3:18 -----------------------------------------------------------------
3 |given [T <: Tuple.meow]: Unit = ??? // error
  |            ^^^^^^^^^^
  |            type meow is not a member of object Tuple
